Use normal font size for About Freefeed Tokens

--- a/app/views/access_tokens/new.html.erb
+++ b/app/views/access_tokens/new.html.erb
@@ -102,7 +102,7 @@
 
     <div class="card mt-4">
       <div class="card-body">
-        <div class="small text-muted">
+        <div class="text-muted">
           <h6>About Freefeed Tokens</h6>
           <ul class="mb-0">
             <li>Use tokens from your Freefeed account</li>
