--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -8,60 +8,58 @@
 </div>
 
 <% if @events.any? %>
-  <div class="card">
-    <div class="table-responsive">
-      <table class="table table-hover mb-0">
-        <thead class="table-light">
+  <div class="table-responsive">
+    <table class="table table-hover table-bordered">
+      <thead>
+        <tr>
+          <th>Type</th>
+          <th>Level</th>
+          <th>Message</th>
+          <th>User</th>
+          <th>Subject</th>
+          <th>Created</th>
+          <th class="text-end">Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @events.each do |event| %>
           <tr>
-            <th scope="col">Type</th>
-            <th scope="col">Level</th>
-            <th scope="col">Message</th>
-            <th scope="col">User</th>
-            <th scope="col">Subject</th>
-            <th scope="col">Created</th>
-            <th scope="col"></th>
+            <td>
+              <code class="text-dark"><%= event.type %></code>
+            </td>
+            <td>
+              <span class="badge bg-<%= level_badge_class(event.level) %>">
+                <%= event.level.humanize %>
+              </span>
+            </td>
+            <td>
+              <div class="text-truncate" style="max-width: 300px;">
+                <%= event.message.present? ? event.message : content_tag(:em, "No message", class: "text-muted") %>
+              </div>
+            </td>
+            <td>
+              <%= event.user&.email_address || content_tag(:em, "System", class: "text-muted") %>
+            </td>
+            <td>
+              <% if event.subject %>
+                <span class="text-muted"><%= event.subject_type %></span>
+                <span class="text-primary">#<%= event.subject_id %></span>
+              <% else %>
+                <em class="text-muted">None</em>
+              <% end %>
+            </td>
+            <td>
+              <span class="text-muted" title="<%= event.created_at.iso8601 %>">
+                <%= time_ago_in_words(event.created_at) %> ago
+              </span>
+            </td>
+            <td class="text-end">
+              <%= link_to "View", event_path(event), class: "text-primary text-decoration-none" %>
+            </td>
           </tr>
-        </thead>
-          <tbody>
-            <% @events.each do |event| %>
-              <tr>
-                <td>
-                  <code class="text-dark"><%= event.type %></code>
-                </td>
-                <td>
-                  <span class="badge bg-<%= level_badge_class(event.level) %>">
-                    <%= event.level.humanize %>
-                  </span>
-                </td>
-                <td>
-                  <div class="text-truncate" style="max-width: 300px;">
-                    <%= event.message.present? ? event.message : content_tag(:em, "No message", class: "text-muted") %>
-                  </div>
-                </td>
-                <td>
-                  <%= event.user&.email_address || content_tag(:em, "System", class: "text-muted") %>
-                </td>
-                <td>
-                  <% if event.subject %>
-                    <span class="text-muted"><%= event.subject_type %></span>
-                    <span class="text-primary">#<%= event.subject_id %></span>
-                  <% else %>
-                    <em class="text-muted">None</em>
-                  <% end %>
-                </td>
-                <td>
-                  <span title="<%= event.created_at.iso8601 %>">
-                    <%= time_ago_in_words(event.created_at) %> ago
-                  </span>
-                </td>
-                <td>
-                  <%= link_to "View", event_path(event), class: "btn btn-sm btn-outline-primary" %>
-                </td>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
-    </div>
+        <% end %>
+      </tbody>
+    </table>
   </div>
 
   <% if @total_pages > 1 %>
