--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -32,7 +32,7 @@
 
       <dt class="col-lg-2 col-md-3">Level</dt>
       <dd class="col-lg-4 col-md-9">
-        <%= level_badge(@event.level) %>
+        <%= level_badge_full(@event.level) %>
       </dd>
 
       <dt class="col-lg-2 col-md-3">User</dt>
