Display event level in all caps

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -31,7 +31,7 @@
       </dd>
 
       <dt class="col-lg-2 col-md-3">Level</dt>
-      <dd class="col-lg-4 col-md-9">
+      <dd class="col-lg-4 col-md-9 text-uppercase">
         <%= level_badge_full(@event.level) %>
       </dd>
 
