--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,10 @@
     <link rel="icon" href="/icon.png" type="image/png">
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/icon.png">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,400;0,500;0,600;1,400&display=swap" rel="stylesheet">
 
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
@@ -53,6 +57,10 @@
                 <ul class="dropdown-menu dropdown-menu-end">
                   <li><%= link_to "Profile", profile_path, class: "dropdown-item" %></li>
                   <li><%= link_to "Tokens", access_tokens_path, class: "dropdown-item" %></li>
+                  <% if policy(Event).index? %>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><%= link_to "Events", events_path, class: "dropdown-item" %></li>
+                  <% end %>
                   <li><hr class="dropdown-divider"></li>
                   <li>
                     <%= link_to "Sign Out", session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
