--- a/app/views/feeds/_form.html.erb
+++ b/app/views/feeds/_form.html.erb
@@ -71,7 +71,7 @@
 
   <div class="mb-3">
     <div class="form-check">
-      <%= form.check_box :enabled, { class: "form-check-input" }, "1", "0" %>
+      <%= form.check_box :enabled, { class: "form-check-input", checked: feed.state == "enabled" }, "1", "0" %>
       <%= form.label :enabled, "Enabled", class: "form-check-label" %>
     </div>
     <div class="form-text">Enable this feed to start processing items</div>
