--- a/app/views/access_tokens/index.html.erb
+++ b/app/views/access_tokens/index.html.erb
@@ -3,14 +3,10 @@
   <%= link_to "Create New Token", new_access_token_path, class: "btn btn-primary" %>
 </div>
 
-<% if @access_tokens.inactive.joins(:feeds).exists? %>
-  <div class="mb-4">
-    <p class="text-muted mb-0">
-      <small>
-        <strong>Note:</strong> Inactive tokens automatically disable associated feeds. 
-        You can replace inactive tokens with new ones to re-enable your feeds.
-      </small>
-    </p>
+<% if @access_tokens.inactive.exists? %>
+  <div class="alert alert-warning mb-4">
+    <strong>Note:</strong> Inactive tokens automatically disable associated feeds.
+    You can replace inactive tokens with new ones to re-enable your feeds.
   </div>
 <% end %>
 
