--- a/app/views/access_tokens/index.html.erb
+++ b/app/views/access_tokens/index.html.erb
@@ -4,9 +4,9 @@
 </div>
 
 <% if @access_tokens.inactive.exists? %>
-  <div class="alert alert-warning mb-4">
+  <div class="alert alert-secondary mb-4">
     <strong>Note:</strong> Inactive tokens automatically disable associated feeds.
-    You can replace inactive tokens with new ones to re-enable your feeds.
+    You can <b>Replace</b> inactive tokens with new ones to re-enable your feeds.
   </div>
 <% end %>
 
